#10553 [SCSS 개선] mixins, function 리팩터링 검토 : template 하위 scss 리팩터링

--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -996,6 +996,8 @@ input {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
   vertical-align: middle;
 }
@@ -1009,6 +1011,8 @@ input:not(:disabled):focus, input:not(:read-only):focus {
 input:not(:disabled):hover, input:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 input:disabled {
@@ -1066,6 +1070,8 @@ textarea {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   padding: 0.5rem 0.625rem 0.5rem 0.625rem;
   resize: vertical;
 }
@@ -1079,6 +1085,8 @@ textarea:not(:disabled):focus, textarea:not(:read-only):focus {
 textarea:not(:disabled):hover, textarea:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 textarea:disabled {
@@ -1136,6 +1144,8 @@ select {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
   vertical-align: middle;
 }
@@ -1146,6 +1156,8 @@ select:not(:disabled):focus, select:not(:read-only):focus {
 select:not(:disabled):hover, select:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 select:disabled {
@@ -1156,8 +1168,8 @@ select:disabled {
 }
 
 .select {
-  display: inline-block;
   position: relative;
+  display: inline-block;
   font-size: 1rem;
   height: 2.5rem;
 }
@@ -1176,6 +1188,8 @@ select:disabled {
   color: #586872;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   font-family: inherit;
   font-size: 1rem;
   font-weight: 400;
@@ -1187,16 +1201,22 @@ select:disabled {
 }
 .select .designed-select:after {
   content: "";
+  position: absolute;
+  right: 0.625rem;
   width: 0;
   height: 0;
   border: 0.625rem solid transparent;
-  background: url("../media/icons/icon_arrow_bottom.svg") no-repeat center left;
-  position: absolute;
-  right: 0.625rem;
+  background-image: url("../media/icons/icon_arrow_bottom.svg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: left;
 }
 .select .designed-select:not(:disabled):hover, .select .designed-select:not(.readonly):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 .select .designed-select:not(:disabled).active, .select .designed-select:not(.readonly).active {
@@ -1205,7 +1225,11 @@ select:disabled {
 }
 .select .designed-select:not(:disabled).active:after, .select .designed-select:not(.readonly).active:after {
   top: 0.5625rem;
-  background: url("../media/icons/icon_arrow_up.svg") no-repeat center left;
+  background-image: url("../media/icons/icon_arrow_up.svg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: left;
 }
 .select .designed-select:not(:disabled).active + .designed-options, .select .designed-select:not(.readonly).active + .designed-options {
   display: block;
@@ -1227,12 +1251,16 @@ select:disabled {
   padding: 0;
   list-style: none;
   max-height: 25rem;
-  overflow: auto;
   color: #586872;
   background-color: #ffffff;
   outline: 0;
   border: 0.0625rem solid #EBEBEB;
+  overflow: auto;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+  -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+  -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   box-shadow: 0 0 0.3125rem 0 #EBEBEB;
 }
 .select .designed-options li {
@@ -1300,26 +1328,30 @@ label {
 }
 .radio input[type=radio] + span::before {
   content: "";
-  display: inline-block;
   position: relative;
+  top: -0.0625rem;
+  display: inline-block;
   width: 1.125rem;
   height: 1.125rem;
-  top: -0.0625rem;
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   vertical-align: middle;
   text-align: center;
 }
 .radio input[type=radio] + span::after {
   content: "";
   position: absolute;
-  width: 0.625rem;
-  height: 0.625rem;
   top: 0;
   left: 0;
+  width: 0.625rem;
+  height: 0.625rem;
   background-color: transparent;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
 }
 .radio input[type=radio]:not(:disabled) + span {
   cursor: pointer;
@@ -1340,6 +1372,8 @@ label {
 }
 .radio input[type=radio]:not(:disabled):hover + span::before {
   border-color: #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 .radio input[type=radio]:disabled + span::before {
@@ -1386,6 +1420,8 @@ label {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   vertical-align: middle;
 }
 .checkbox input[type=checkbox]:not(:disabled) + span {
@@ -1397,10 +1433,10 @@ label {
 .checkbox input[type=checkbox]:not(:disabled):checked + span::after {
   content: "";
   position: absolute;
-  width: 0.75rem;
-  height: 0.375rem;
   top: 0.375rem;
   left: 0;
+  width: 0.75rem;
+  height: 0.375rem;
   border: 0.125rem solid #0098FF;
   border-right: none;
   border-top: none;
@@ -1412,6 +1448,8 @@ label {
 }
 .checkbox input[type=checkbox]:not(:disabled):hover + span::before {
   border-color: #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 .checkbox input[type=checkbox]:disabled + span::before {
@@ -1449,26 +1487,33 @@ label {
 }
 .switch input[type=checkbox] + span {
   position: absolute;
-  width: 5rem;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
+  left: 0;
+  width: 5rem;
   background-color: #E1E3E6;
   border-radius: 2.5rem;
+  -webkit-border-radius: 2.5rem;
+  -moz-border-radius: 2.5rem;
   cursor: pointer;
   -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  -ms-transition: 0.4s;
   transition: 0.4s;
 }
 .switch input[type=checkbox] + span::before {
   content: "";
   position: absolute;
+  bottom: 0.3125rem;
+  left: 0.25rem;
   width: 1.563rem;
   height: 1.563rem;
-  left: 0.25rem;
-  bottom: 0.3125rem;
   background-color: #ffffff;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
 }
 .switch input[type=checkbox]:checked + span {
   background-color: #0098FF;
@@ -1482,6 +1527,8 @@ label {
 }
 .switch input[type=checkbox]:hover + span::before {
   border-color: #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 .switch:focus input[type=checkbox] + span:before {
@@ -1711,8 +1758,11 @@ button {
   background-color: transparent;
   border: 0.0625rem solid transparent;
   border-radius: 0.1875rem;
+  -webkit-border-radius: 0.1875rem;
+  -moz-border-radius: 0.1875rem;
   opacity: 1;
   text-align: center;
+  text-decoration: none;
   user-select: none;
   white-space: nowrap;
   vertical-align: middle;
@@ -2111,6 +2161,7 @@ button.ghost-line:disabled .icon {
 }
 .btn-group-toggle .btn,
 .btn-group-toggle button {
+  flex: 1 1 auto;
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.2;
@@ -2118,7 +2169,6 @@ button.ghost-line:disabled .icon {
   background-color: #F7F8F9;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.1875rem;
-  flex: 1 1 auto;
 }
 .btn-group-toggle .btn .icon,
 .btn-group-toggle button .icon {
@@ -2588,13 +2638,13 @@ button .icon-delete {
   z-index: 999999;
 }
 .gmodal-backdrop {
-  z-index: 999999;
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   background: rgba(116, 147, 179, 0.5);
+  z-index: 999999;
 }
 .gmodal-dialog {
   position: absolute;
@@ -2607,9 +2657,13 @@ button .icon-delete {
   padding: 1.5625rem;
   margin: 0 auto 2em auto;
   box-sizing: border-box;
+  -webkit-box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
+  -moz-box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
   box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
   border: solid 0.0625rem #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   background: #ffffff;
   z-index: 999999;
 }
@@ -2639,20 +2693,11 @@ button .icon-delete {
   text-align: right;
 }
 .gmodal-button {
-  display: inline-block;
-  color: #3F4B56;
   font-size: 1rem;
   font-weight: 500;
-  text-transform: uppercase;
-  text-decoration: none;
-  text-align: center;
   margin: 0rem 0rem 0rem 0.3125rem;
   padding: 0.4375rem 1.5rem;
   border: solid 0.0625rem #EBEBEB;
-  border-radius: 0.1875rem;
-  -webkit-border-radius: 0.1875rem;
-  -moz-border-radius: 0.1875rem;
-  cursor: pointer;
 }
 .gmodal-icon-success {
   background-image: url("../media/icons/alert/icon_alert_success.svg");
@@ -2722,11 +2767,11 @@ button .icon-delete {
 .scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
   content: "";
   position: absolute;
-  left: 0;
-  right: 0;
-  display: block;
   top: -0.375rem;
+  right: 0;
   bottom: -0.125rem;
+  left: 0;
+  display: block;
 }
 .scrollbar > .os-scrollbar-vertical {
   bottom: 0.625rem;
@@ -2739,10 +2784,10 @@ button .icon-delete {
   content: "";
   position: absolute;
   top: 0;
-  bottom: 0;
-  display: block;
-  left: -0.375rem;
   right: -0.125rem;
+  bottom: 0;
+  left: -0.375rem;
+  display: block;
 }
 .scrollbar > .os-scrollbar-corner {
   width: 0.625rem;
@@ -2756,9 +2801,13 @@ button .icon-delete {
 .scrollbar > .os-scrollbar > .os-scrollbar-track {
   background: rgba(235, 235, 235, 0.6);
   border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
 }
 .scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
   border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
   background: #E1E3E6;
 }
 .scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
@@ -2806,6 +2855,8 @@ button .icon-delete {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   padding: 0.5rem 0.625rem 0.5rem 0.625rem;
   resize: vertical;
 }
@@ -2816,6 +2867,8 @@ button .icon-delete {
 .textarea-scroll-wrapper:hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 
@@ -2829,11 +2882,11 @@ button .icon-delete {
 .inner-scrollbar > .os-scrollbar-horizontal .os-scrollbar-handle:before {
   content: "";
   position: absolute;
-  left: 0;
-  right: 0;
-  display: block;
   top: -0.375rem;
+  right: 0;
   bottom: -0.125rem;
+  left: 0;
+  display: block;
 }
 .inner-scrollbar > .os-scrollbar-vertical {
   bottom: 0.625rem;
@@ -2846,10 +2899,10 @@ button .icon-delete {
   content: "";
   position: absolute;
   top: 0;
-  bottom: 0;
-  display: block;
-  left: -0.375rem;
   right: -0.125rem;
+  bottom: 0;
+  left: -0.375rem;
+  display: block;
 }
 .inner-scrollbar > .os-scrollbar-corner {
   width: 0.625rem;
@@ -2863,9 +2916,13 @@ button .icon-delete {
 .inner-scrollbar > .os-scrollbar > .os-scrollbar-track {
   background: rgba(235, 235, 235, 0.6);
   border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
 }
 .inner-scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
   border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
   background: #E1E3E6;
 }
 .inner-scrollbar > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
@@ -2888,11 +2945,11 @@ button .icon-delete {
 .inner-scrollbar-dark > .os-scrollbar-horizontal .os-scrollbar-handle:before {
   content: "";
   position: absolute;
-  left: 0;
-  right: 0;
-  display: block;
   top: -0.375rem;
+  right: 0;
   bottom: -0.125rem;
+  left: 0;
+  display: block;
 }
 .inner-scrollbar-dark > .os-scrollbar-vertical {
   bottom: 0.625rem;
@@ -2905,10 +2962,10 @@ button .icon-delete {
   content: "";
   position: absolute;
   top: 0;
-  bottom: 0;
-  display: block;
-  left: -0.375rem;
   right: -0.125rem;
+  bottom: 0;
+  left: -0.375rem;
+  display: block;
 }
 .inner-scrollbar-dark > .os-scrollbar-corner {
   width: 0.625rem;
@@ -2922,9 +2979,13 @@ button .icon-delete {
 .inner-scrollbar-dark > .os-scrollbar > .os-scrollbar-track {
   background: #283238;
   border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
 }
 .inner-scrollbar-dark > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
   border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
   background: #3F4B56;
 }
 .inner-scrollbar-dark > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
@@ -2963,6 +3024,8 @@ button .icon-delete {
 .ql-container .ql-editor::-webkit-scrollbar-track {
   background-color: rgba(235, 235, 235, 0.6);
   border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
 }
 .ql-container .ql-editor::-webkit-scrollbar {
   width: 0.5rem;
@@ -2971,6 +3034,8 @@ button .icon-delete {
 .ql-container .ql-editor::-webkit-scrollbar-thumb {
   background-color: #E1E3E6;
   border-radius: 0.5rem;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
 }
 .ql-container .ql-editor::-webkit-scrollbar-thumb:hover {
   background-color: #CCCED1;
@@ -3151,6 +3216,8 @@ button .icon-delete {
   background: #CCCED1;
 }
 .help-tooltip .tooltip-contents {
+  position: absolute;
+  left: 0;
   visibility: hidden;
   background-color: #ffffff;
   color: #0098FF;
@@ -3158,11 +3225,13 @@ button .icon-delete {
   font-size: 1rem;
   border: 0.125rem solid #0098FF;
   border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
   padding: 1.0625rem 0.9375rem 0.9375rem 0.9375rem;
   margin: 0.25rem 0 0 0;
-  position: absolute;
-  left: 0;
   z-index: 500;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(30, 47, 63, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(30, 47, 63, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(30, 47, 63, 0.2);
 }
 .help-tooltip .tooltip-contents span {
@@ -3208,6 +3277,7 @@ button .icon-delete {
 }
 
 .header-tooltip .tooltip-contents {
+  position: absolute;
   min-width: 3.75rem;
   visibility: hidden;
   background-color: #33ADFF;
@@ -3215,9 +3285,10 @@ button .icon-delete {
   text-align: center;
   font-size: 1.125rem;
   border-radius: 0.1875rem;
+  -webkit-border-radius: 0.1875rem;
+  -moz-border-radius: 0.1875rem;
   padding: 0.6875rem 0.875rem;
   margin: 1.3125rem 0 0 0;
-  position: absolute;
   z-index: 500;
 }
 .header-tooltip .tooltip-contents span {
@@ -3335,14 +3406,18 @@ body.modal-active {
 .modal-wrapper .modal-dialog {
   position: absolute;
   top: 4em;
-  left: 0;
   right: 0;
+  left: 0;
   width: 34.38rem;
   margin: 0 auto 2em auto;
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
+  -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+  -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   z-index: 5000;
 }
 .modal-wrapper .modal-dialog .modal-header {
@@ -3401,6 +3476,8 @@ body.modal-active {
   margin: 0.625rem;
   padding: 0;
   border: 0.0625rem solid #EBEBEB;
+  -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+  -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   background-color: #ffffff;
   cursor: pointer;
