--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -959,6 +959,8 @@ input {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
   vertical-align: middle;
 }
@@ -972,6 +974,8 @@ input:not(:disabled):focus, input:not(:read-only):focus {
 input:not(:disabled):hover, input:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 input:disabled {
@@ -1029,6 +1033,8 @@ textarea {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   padding: 0.5rem 0.625rem 0.5rem 0.625rem;
   resize: vertical;
 }
@@ -1042,6 +1048,8 @@ textarea:not(:disabled):focus, textarea:not(:read-only):focus {
 textarea:not(:disabled):hover, textarea:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 textarea:disabled {
@@ -1099,6 +1107,8 @@ select {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   padding: 0 0.625rem 0 0.625rem;
   vertical-align: middle;
 }
@@ -1109,6 +1119,8 @@ select:not(:disabled):focus, select:not(:read-only):focus {
 select:not(:disabled):hover, select:not(:read-only):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 select:disabled {
@@ -1119,8 +1131,8 @@ select:disabled {
 }
 
 .select {
-  display: inline-block;
   position: relative;
+  display: inline-block;
   font-size: 1rem;
   height: 2.5rem;
 }
@@ -1139,6 +1151,8 @@ select:disabled {
   color: #586872;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   font-family: inherit;
   font-size: 1rem;
   font-weight: 400;
@@ -1150,16 +1164,22 @@ select:disabled {
 }
 .select .designed-select:after {
   content: "";
+  position: absolute;
+  right: 0.625rem;
   width: 0;
   height: 0;
   border: 0.625rem solid transparent;
-  background: url("../media/icons/icon_arrow_bottom.svg") no-repeat center left;
-  position: absolute;
-  right: 0.625rem;
+  background-image: url("../media/icons/icon_arrow_bottom.svg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: left;
 }
 .select .designed-select:not(:disabled):hover, .select .designed-select:not(.readonly):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 .select .designed-select:not(:disabled).active, .select .designed-select:not(.readonly).active {
@@ -1168,7 +1188,11 @@ select:disabled {
 }
 .select .designed-select:not(:disabled).active:after, .select .designed-select:not(.readonly).active:after {
   top: 0.5625rem;
-  background: url("../media/icons/icon_arrow_up.svg") no-repeat center left;
+  background-image: url("../media/icons/icon_arrow_up.svg");
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: left;
 }
 .select .designed-select:not(:disabled).active + .designed-options, .select .designed-select:not(.readonly).active + .designed-options {
   display: block;
@@ -1190,12 +1214,16 @@ select:disabled {
   padding: 0;
   list-style: none;
   max-height: 25rem;
-  overflow: auto;
   color: #586872;
   background-color: #ffffff;
   outline: 0;
   border: 0.0625rem solid #EBEBEB;
+  overflow: auto;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
+  -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+  -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   box-shadow: 0 0 0.3125rem 0 #EBEBEB;
 }
 .select .designed-options li {
@@ -1263,26 +1291,30 @@ label {
 }
 .radio input[type=radio] + span::before {
   content: "";
-  display: inline-block;
   position: relative;
+  top: -0.0625rem;
+  display: inline-block;
   width: 1.125rem;
   height: 1.125rem;
-  top: -0.0625rem;
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   vertical-align: middle;
   text-align: center;
 }
 .radio input[type=radio] + span::after {
   content: "";
   position: absolute;
-  width: 0.625rem;
-  height: 0.625rem;
   top: 0;
   left: 0;
+  width: 0.625rem;
+  height: 0.625rem;
   background-color: transparent;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
 }
 .radio input[type=radio]:not(:disabled) + span {
   cursor: pointer;
@@ -1303,6 +1335,8 @@ label {
 }
 .radio input[type=radio]:not(:disabled):hover + span::before {
   border-color: #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 .radio input[type=radio]:disabled + span::before {
@@ -1349,6 +1383,8 @@ label {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   vertical-align: middle;
 }
 .checkbox input[type=checkbox]:not(:disabled) + span {
@@ -1360,10 +1396,10 @@ label {
 .checkbox input[type=checkbox]:not(:disabled):checked + span::after {
   content: "";
   position: absolute;
-  width: 0.75rem;
-  height: 0.375rem;
   top: 0.375rem;
   left: 0;
+  width: 0.75rem;
+  height: 0.375rem;
   border: 0.125rem solid #0098FF;
   border-right: none;
   border-top: none;
@@ -1375,6 +1411,8 @@ label {
 }
 .checkbox input[type=checkbox]:not(:disabled):hover + span::before {
   border-color: #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 .checkbox input[type=checkbox]:disabled + span::before {
@@ -1412,26 +1450,33 @@ label {
 }
 .switch input[type=checkbox] + span {
   position: absolute;
-  width: 5rem;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
+  left: 0;
+  width: 5rem;
   background-color: #E1E3E6;
   border-radius: 2.5rem;
+  -webkit-border-radius: 2.5rem;
+  -moz-border-radius: 2.5rem;
   cursor: pointer;
   -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -o-transition: 0.4s;
+  -ms-transition: 0.4s;
   transition: 0.4s;
 }
 .switch input[type=checkbox] + span::before {
   content: "";
   position: absolute;
+  bottom: 0.3125rem;
+  left: 0.25rem;
   width: 1.563rem;
   height: 1.563rem;
-  left: 0.25rem;
-  bottom: 0.3125rem;
   background-color: #ffffff;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
 }
 .switch input[type=checkbox]:checked + span {
   background-color: #0098FF;
@@ -1445,6 +1490,8 @@ label {
 }
 .switch input[type=checkbox]:hover + span::before {
   border-color: #0098FF;
+  -webkit-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
+  -moz-box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
 .switch:focus input[type=checkbox] + span:before {
@@ -1585,14 +1632,18 @@ body.modal-active {
 .modal-wrapper .modal-dialog {
   position: absolute;
   top: 4em;
-  left: 0;
   right: 0;
+  left: 0;
   width: 34.38rem;
   margin: 0 auto 2em auto;
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
+  -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+  -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   z-index: 5000;
 }
 .modal-wrapper .modal-dialog .modal-header {
