--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -43,9 +43,7 @@ h6 {
   font-size: $h6-font-size;
 }
 // a
-a {
-  cursor: pointer;
-}
+a { cursor: pointer; }
 a:link,
 a:visited,
 a:hover,
@@ -63,7 +61,7 @@ input {
   color: $element-font-color;
   background-color: $element-bg-color;
   border: $element-border;
-  border-radius: $element-border-radius; // 1px
+  @include borderRadius(0.0625rem); // 1px
   padding: 0 $element-indent 0 $element-indent; // 들여쓰기 0 10px
   vertical-align: middle;
 
@@ -81,7 +79,7 @@ input {
     &:hover {
       outline: 0;
       border: $element-hover-border;
-      box-shadow: $element-hover-box-shadow;
+      @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
     }
   }
 
@@ -136,7 +134,7 @@ textarea {
   color: $element-font-color;
   background-color: $element-bg-color;
   border: $element-border;
-  border-radius: $element-border-radius;
+  @include borderRadius(0.0625rem); // 1px
   padding: 0.5rem $element-indent 0.5rem $element-indent; // 들여쓰기 8px 10px 8px 10px
   resize: vertical;
 
@@ -154,7 +152,7 @@ textarea {
     &:hover {
       outline: 0;
       border: $element-hover-border;
-      box-shadow: $element-hover-box-shadow;
+      @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
     }
   }
 
@@ -213,7 +211,7 @@ select {
   color: $element-font-color;
   background-color: $element-bg-color;
   border: $element-border;
-  border-radius: $element-border-radius;
+  @include borderRadius(0.0625rem); // 1px
   padding: 0 $element-indent 0 $element-indent; // 들여쓰기 0 10px 0 10px
   vertical-align: middle;
 
@@ -227,7 +225,7 @@ select {
     &:hover {
       outline: 0;
       border: $element-hover-border;
-      box-shadow: $element-hover-box-shadow;
+      @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
     }
   }
 
@@ -241,8 +239,8 @@ select {
 
 // designed select
 .select {
+  @include relative();
   display: inline-block;
-  position: relative;
   font-size: $element-font-size;
   height: 2.5rem; // 40px
 
@@ -252,16 +250,12 @@ select {
   }
 
   .designed-select {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    @include absolute(0, 0, 0, 0);
     padding: 0.5rem 0.625rem; // 8px 10px
     background-color: $element-bg-color;
     color: $element-font-color;
     border: $element-border;
-    border-radius: $element-border-radius;
+    @include borderRadius(0.0625rem); // 1px
     font-family: inherit;
     font-size: $element-font-size;
     font-weight: $element-font-weight;
@@ -272,20 +266,19 @@ select {
     cursor: pointer;
 
     &:after {
-      content:"";
+      content:'';
+      @include absolute($right: 0.625rem); // 10px
       width: 0;
       height: 0;
       border: 0.625rem solid transparent; // 10px
-      background: url($icon-folder-path + "icon_arrow_bottom.svg") no-repeat center left;
-      position: absolute;
-      right: 0.625rem; // 10px
+      @include backgroundImage($icon-folder-path + 'icon_arrow_bottom.svg', auto, no-repeat, center, left, null);
     }
     &:not(:disabled),
     &:not(.readonly) {
       &:hover {
         outline: 0;
         border: $element-hover-border;
-        box-shadow: $element-hover-box-shadow;
+        @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
       }
       &.active {
         outline: 0;
@@ -293,7 +286,7 @@ select {
 
         &:after {
           top: 0.5625rem; // 9px
-          background: url($icon-folder-path + "icon_arrow_up.svg") no-repeat center left;
+          @include backgroundImage($icon-folder-path + 'icon_arrow_up.svg', auto, no-repeat, center, left, null);
         }
 
         + .designed-options {
@@ -312,22 +305,19 @@ select {
 
   .designed-options {
     display: none;
-    position: absolute;
-    top: calc(100% + 0.3125rem); // 5px
-    right: 0;
-    left: 0;
+    @include absolute(calc(100% + 0.3125rem), 0, null, 0);  // 5px
     z-index: $z-index-between-alert-modal;
     margin: 0;
     padding: 0;
     list-style: none;
     max-height: 25rem; // 400px
-    overflow: auto;
     color: $element-font-color;
     background-color: $element-bg-color;
     outline: 0;
     border: $element-border;
-    border-radius: $element-border-radius;
-    box-shadow: $datepicker-border-box-shadow; // TODO: 변수를 따로 빼야 하나?
+    overflow: auto;
+    @include borderRadius(0.0625rem); // 1px
+    @include boxShadow(0, 0, 0.3125rem, 0, map-get($grays, 'line'));
     li {
       margin: 0;
       padding: 0.75rem 0; // 12px
@@ -336,7 +326,7 @@ select {
       &:hover {
         background: $select-bg-color;
       }
-      &[rel="hide"] {
+      &[rel='hide'] {
         display: none;
       }
     }
@@ -378,7 +368,7 @@ label {
 }
 // radio button
 .radio {
-  position: relative;
+  @include relative();
   font-family: inherit;
   font-size: $element-font-size;
   font-weight: $element-font-weight;
@@ -393,31 +383,28 @@ label {
     display: none;
     // ⓞ 로 사용될 span
     + span {
-      position: relative;
+      @include relative();
 
       &::before { // 테두리로 사용되는 큰 원
         content: '';
+        @include relative($top: -0.0625rem); // -1px
         display: inline-block;
-        position: relative;
         width: 1.125rem; // 18px
         height: 1.125rem; // 18px
-        top: -0.0625rem; // -1px
         background-color: $element-bg-color;
         border: $element-border;
-        border-radius: 50%;
+        @include borderRadius(50%);
         vertical-align: middle;
         text-align: center;
       }
 
       &::after { // 선택시 작은 원
         content: '';
-        position: absolute;
+        @include absolute($top: 0, $left: 0);
         width: 0.625rem; // 10px
         height: 0.625rem; // 10px
-        top: 0;
-        left: 0;
         background-color: transparent;
-        border-radius: 50%;
+        @include borderRadius(50%);
       }
     }
 
@@ -441,7 +428,7 @@ label {
         + span {
           &::before {
             border-color: $element-hover-border-color;
-            box-shadow: $element-hover-box-shadow;
+            @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
           }
         }
       }
@@ -495,7 +482,7 @@ label {
     display: none;
     // 체크 박스 span
     + span {
-      position: relative;
+      @include relative();
 
       &::before {
         content: '';
@@ -504,7 +491,7 @@ label {
         height: 1.125rem; // 18px
         background-color: $element-bg-color;
         border: $element-border;
-        border-radius: $element-border-radius;
+        @include borderRadius(0.0625rem); // 1px
         vertical-align: middle;
       }
     }
@@ -517,11 +504,9 @@ label {
           // 체크 기호
           &::after {
             content: '';
-            position: absolute;
+            @include absolute($top: 0.375rem, $left: 0); // 6px
             width: 0.75rem; // 12px
             height: 0.375rem; // 6px
-            top: 0.375rem; // 6px
-            left: 0;
             border: 0.125rem solid $element-checked-bg-color; // 2px
             border-right: none;
             border-top: none;
@@ -534,7 +519,7 @@ label {
         + span {
           &::before {
             border-color: $element-hover-border-color;
-            box-shadow: $element-hover-box-shadow;
+            @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
           }
         }
       }
@@ -567,7 +552,7 @@ label {
 }
 // switch
 .switch {
-  position: relative;
+  @include relative();
   height: 2.188rem; // 35px
   font-family: inherit;
   font-size: $element-font-size;
@@ -588,27 +573,20 @@ label {
     display: none;
     // 스위치 버튼
     + span {
-      position: absolute;
+      @include absolute(0, 0, 0, 0);
       width: 5rem; // 80px
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: map-get($grays, "default");
-      border-radius: 2.5rem; // 40px
+      background-color: map-get($grays, 'default');
+      @include borderRadius(2.5rem); // 40px
       cursor: pointer;
-      -webkit-transition: .4s;
-        transition: .4s;
+      @include transition(.4s);
       // 동그라미
       &::before {
         content: '';
-        position: absolute;
+        @include absolute($left: 0.25rem, $bottom: 0.3125rem); // 4px 5px
         width: 1.563rem; // 25px
         height: 1.563rem; // 25px
-        left: 0.25rem; // 4px
-        bottom: 0.3125rem; // 5px
         background-color: $white;
-        border-radius: 50%;
+        @include borderRadius(50%);
       }
     }
 
@@ -632,7 +610,7 @@ label {
       + span {
         &::before {
           border-color: $element-hover-border-color;
-          box-shadow: $element-hover-box-shadow;
+          @include boxShadow(0, 0, 0.3125rem, 0, hexToRGBA($blue, 0.2)); // 5px
         }
       }
     }
@@ -650,7 +628,7 @@ label {
 }
 // input box + button
 .input-button {
-  input[type="text"] { 
+  input[type='text'] { 
     margin: 0; 
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
