--- a/src/main/resources/public/src/scss/template/_modal.scss
+++ b/src/main/resources/public/src/scss/template/_modal.scss
@@ -26,16 +26,13 @@ body.modal-active {
   }
 
   .modal-dialog {
-    position: absolute;
-    top: 4em;
-    left: 0;
-    right: 0;
+    @include absolute(4em, 0, null, 0);
     width: $modal-width;
     margin: 0 auto 2em auto;
     background-color: $modal-bg-color;
     border: $modal-border;
-    box-shadow: $modal-box-shadow;
-    border-radius: 0.0625rem;
+    @include boxShadow(0, 0, 0.3125rem, 0, map-get($grays, 'line')); // 흐림 5px, $line-gray
+    @include borderRadius(0.0625rem); // 1px
     z-index: $z-index-between-alert-modal;
 
     .modal-header {
