--- a/src/main/resources/public/src/scss/template/_text-editor.scss
+++ b/src/main/resources/public/src/scss/template/_text-editor.scss
@@ -53,7 +53,7 @@
 
         .ql-picker-options {
           padding: 0;
-          box-shadow:  $text-editor-toolbar-box-shadow;
+          @include boxShadow(0, 0, 0.3125rem, 0, map-get($grays, 'line'));
           // 상대 크기
           .ql-picker-item[data-value="1"]::before { font-size: 2em; }
           .ql-picker-item[data-value="2"]::before { font-size: 1.5em; }
@@ -120,7 +120,7 @@
         }
 
         .ql-picker-options {
-          box-shadow: $text-editor-toolbar-box-shadow;
+          @include boxShadow(0, 0, 0.3125rem, 0, map-get($grays, 'line'));
         }
 
         &.ql-expanded {
@@ -176,7 +176,7 @@
 
         .ql-picker-options {
           min-width: 2.813rem; // 45px
-          box-shadow: $text-editor-toolbar-box-shadow;
+          @include boxShadow(0, 0, 0.3125rem, 0, map-get($grays, 'line'));
           padding: 0;
           .ql-icon-arrow {
             fill-opacity: 0;
@@ -215,7 +215,7 @@
         height: 2.5rem; // 40px
         padding: 0;
         margin: 0;
-        border-radius: 0;
+        @include borderRadius(0);
 
         svg { float: initial; }
 
