--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -96,7 +96,7 @@ table[id="documentDisplay"] {
   &-list {
     height: 13.5rem; // 216px
     border: $element-border; // 1px
-    border-radius: $element-border-radius;
+    @include borderRadius(0.0625rem); // 1px
     padding: 0.5rem 0.625rem; // 8px 10px
 
     .right {
